--- a/src/index.css
+++ b/src/index.css
@@ -3080,11 +3080,34 @@ button:hover{
     height: 40px;
     font-size: 13pt;
     border:none;
+    position: relative;
+    float: left;
 }
+#loading {
+  display: inline-block;
+  width: 25px;
+  height: 25px;
+  border: 3px solid rgba(255, 255, 255, 0);
+  border-radius: 50%;
+  border-top-color: #fff;
+  animation: spin 1s ease-in-out infinite;
+  -webkit-animation: spin 1s ease-in-out infinite;
+  position: absolute;
+  top: 4px;
+  left: 35px;
+}
+@keyframes spin {
+    to { -webkit-transform: rotate(360deg); }
+  }
+@-webkit-keyframes spin {
+    to { -webkit-transform: rotate(360deg); }
+  }
 .record_top_updated{
     margin-left: 15px;
     font-size: 10pt;
     color: rgb(209, 209, 209);
+    float: left;
+    margin-top: 25px;
 }
 .record_top_medal_box{
     float: right;
@@ -3159,9 +3182,9 @@ button:hover{
 }
 .record_rank_graph{
     background-color: rgb(255, 166, 0);
-    height: 3px;
+    height: 2px;
     width: 55px;
-    margin-top: 12px;
+    margin-top: 11px;
 }
 .record_most{
     background-color: #262335;
@@ -4544,3 +4567,25 @@ button:hover{
     margin-left: 240px;
     margin-right: -220px;
 }
+/* 6 page */
+.Loading_main{
+    width: 1152px;
+    margin:auto;
+}
+.Loading_main_span{
+    text-align: center;
+    font-size: 20pt;
+}
+#loading_animation{
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    border: 4px solid rgba(255, 255, 255, 0);
+    border-radius: 50%;
+    border-top-color: #fff;
+    animation: spin 1s ease-in-out infinite;
+    -webkit-animation: spin 1s ease-in-out infinite;
+    margin-left: 30px;
+    margin-bottom: 50px;
+    margin-top: 300px;
+  }
