--- a/src/index.css
+++ b/src/index.css
@@ -623,6 +623,7 @@ button:hover{
 .rank0-1{
     float: right;
     width: 450px;
+    margin-right: 150px;
     text-align: center;
     font-size: 23pt;
     padding-top: 4px;
@@ -888,14 +889,15 @@ button:hover{
     float: left;
     text-align: center;
     margin-top: 18px;
+    width: 300px;
 }
 .banner-button .actived{
     border-bottom: 1px solid rgb(244,216,35);
-    padding-bottom: 6px;
 }
 .menubutton{
     text-align: center;
     background-color: rgba(0,0,0,0);
+    display: inline-block;
     border: none;
     color: rgb(209, 209, 209);
     font-size: 11pt;
@@ -903,6 +905,9 @@ button:hover{
     float: left;
     margin-right: 15px;
     margin-left: 15px;
+    padding-bottom: 6px;
+    height: 28px;
+    border-bottom: 1px solid #241b2f;
 }
 .S_mainlogo {
     width: 100px;
@@ -1261,8 +1266,8 @@ button:hover{
     left: 160px;
 }
 .skill_tab_span{
-    margin-top: -2px;
-    font-size: 12pt;
+    margin-top: 2px;
+    font-size: 9pt;
     text-align: center;
 }
 .skill_tab_span1{
@@ -1450,10 +1455,13 @@ button:hover{
 }
 .item_tabs{
     float: left;
-    width: 337px;
-    height: 500px;
+    width: 336px;
+    height: 499px;
     background-color: #251f32;
-    overflow: scroll;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    border-bottom: 1px solid #3b4147;
+    border-right: 1px solid #3b4147;
 }
 .item_tabs .actived{
     border-left: 3px solid rgb(244,216,35);
@@ -1467,7 +1475,6 @@ button:hover{
     height: 90px;
     font-size: 15pt;
     color: gray;
-    border-right: 1px solid #3b4147;
     border-left: 3px solid #3b4147;
     border-bottom: 1px solid #3b4147;
 }
@@ -1501,24 +1508,24 @@ button:hover{
     left: 0px
 }
 .item_tab_span{
-    font-size: 12pt;
+    font-size: 10pt;
     text-align: center;
     margin-top: 3px;
 }
 .item_tab_span1{
     display: inline-block;
     width: 90px;
-    margin-top: 2px;
+    margin-top: 7px;
 }
 .item_tab_span2{
     display: inline-block;
     width: 90px;
-    margin-top: 2px;
+    margin-top: 7px;
 }
 .item_tab_span3{
     display: inline-block;
     width: 40px;
-    margin-top: 2px;
+    margin-top: 7px;
 }
 .item_route{
     width: 443px;
@@ -3362,6 +3369,8 @@ button:hover{
 }
 .record_match0_tab{
     width: 75px;
+    display: inline-block;
+    height: 21px;
     float: left;
     font-size: 12pt;
     padding-top: 19px;
@@ -3432,7 +3441,7 @@ button:hover{
 }
 .record_trend_winrate_span{
     display: inline-block;
-    width: 50px;
+    width: 100px;
     font-size: 9pt;
     margin-top: 3px;
     margin-left: 10px;
@@ -3452,7 +3461,7 @@ button:hover{
     width: 100px;
     float: left;
     margin-top: 4px;
-    margin-left: 50px;
+    margin-left: 20px;
 }
 .record_trend_kda1{
     text-align: center;
@@ -3542,7 +3551,7 @@ button:hover{
 }
 .record_history1{
     display: inline-block;
-    width: 100px;
+    width: 120px;
     float: left;
     margin-top: 5px;
 }
@@ -3564,6 +3573,9 @@ button:hover{
 .record_history_filter{
     font-size: 13pt;
     margin-top: -2px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 .record_history_date{
     font-size: 9pt;
@@ -3571,7 +3583,7 @@ button:hover{
 }
 .record_history2{
     display: inline-block;
-    width: 150px;
+    width: 130px;
     float: left;
     margin-top: 5px;
 }
@@ -3586,8 +3598,8 @@ button:hover{
     border:solid 1px #3b4147;
 }
 .record_history_name{
-    font-size: 15pt;
-    margin-top: -5px;
+    font-size: 14pt;
+    margin-top: -2px;
 }
 .record_history3-4{
     float: left;
@@ -3644,7 +3656,7 @@ button:hover{
     text-align: left;
 }
 .record_history4{
-    width: 200px;
+    width: 150px;
     float: left;
     height: 90px;
     text-align: center;
