디테일 맵 탭

--- a/src/index.css
+++ b/src/index.css
@@ -1620,6 +1620,16 @@ button:hover{
 .item_route{
     width: 443px;
     float: left;
+    position: relative;
+}
+.item_route_startimg{
+    width: 50px;
+    position: absolute;
+    left: 10px;
+    top: 35px;
+    border-radius: 10%;
+    cursor: pointer;
+    border: 1px solid #3b4147;
 }
 .item_route_tab{
     width: 88.6px;
