--- a/src/index.css
+++ b/src/index.css
@@ -3617,6 +3617,9 @@ button:hover{
 }
 .record_trend_most_span1{
     font-size: 10pt;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 .record_trend_most_span2{
 }
@@ -4285,6 +4288,9 @@ button:hover{
     margin-top: 15px;
     height: 28px;
     margin-right: 10px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 .record_cha_span4{
     display: inline-block;
